error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
[ 25%] Building CXX object CMakeFiles/celestial_nav.dir/src/image_acquisition.cpp.o
[ 37%] Building CXX object CMakeFiles/celestial_nav.dir/src/preprocessing.cpp.o
[ 50%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_detection.cpp.o
[ 62%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o
In file included from /home/haris/celestial-nav/src/star_matching.h:2,
                 from /home/haris/celestial-nav/src/star_matching.cpp:1:
/home/haris/celestial-nav/src/star_detection.h:8:24: error: ‘Star’ was not declared in this scope
    8 |     static std::vector<Star> detectStars(const cv::Mat &image);
      |                        ^~~~
/home/haris/celestial-nav/src/star_detection.h:8:28: error: template argument 1 is invalid
    8 |     static std::vector<Star> detectStars(const cv::Mat &image);
      |                            ^
/home/haris/celestial-nav/src/star_detection.h:8:28: error: template argument 2 is invalid
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:132: CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 